# flask-microblog

./: .gitignore  app.py  config.py  pyproject.toml
app/: __init__.py  cli.py  email.py  forms.py  models.py  routes.py
app/templates/: _post.html  base.html  index.html  login.html  user.html
app/templates/email/: reset_password.html
migrations/versions/: 557c24367222_add_language_to_posts.py  6e939024fbfd_new_fields_in_user_model.py
templates/: index.html
