[project]
name = "wad-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtpd>=1.4.6",
    "email-validator>=2.3.0",
    "flask<3",
    "flask-babel>=4.0.0",
    "flask-bootstrap>=3.3.7.1",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-moment>=1.0.6",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gitignore>=0.0.8",
    "langdetect>=1.0.9",
    "moment>=0.12.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.1",
    "translate>=3.8.0",
    "werkzeug<3",
]
